--- a/Caddy/Dockerfile
+++ b/Caddy/Dockerfile
@@ -1,4 +1,5 @@
 ARG VERSION=2.8.4
+FROM docker.io/library/caddy:${VERSION} as caddy
 FROM docker.io/library/golang:1.22 AS builder
 ARG VERSION
 RUN go run github.com/caddyserver/xcaddy/cmd/xcaddy@latest build v${VERSION} --output /usr/bin/caddy \
@@ -9,10 +10,9 @@ RUN go run github.com/caddyserver/xcaddy/cmd/xcaddy@latest build v${VERSION} --o
 	--with github.com/hslatman/caddy-crowdsec-bouncer/http@28ef1be0db6542a5efd451009c72ec419b815faa
 
 FROM gcr.io/distroless/static-debian12:nonroot
-ARG VERSION
 COPY --from=builder /usr/bin/caddy /caddy
-COPY --from=docker.io/library/caddy:${VERSION} /etc/caddy/Caddyfile /etc/caddy/Caddyfile
-COPY --from=docker.io/library/caddy:${VERSION} /usr/share/caddy/index.html /usr/share/caddy/index.html
+COPY --from=caddy /etc/caddy/Caddyfile /etc/caddy/Caddyfile
+COPY --from=caddy /usr/share/caddy/index.html /usr/share/caddy/index.html
 ENV XDG_CONFIG_HOME /config
 ENV XDG_DATA_HOME /data
 EXPOSE 443
