Specify blis version for ebook2audiobookpiper

--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -1,12 +1,12 @@
 FROM docker.io/library/python:3.10-slim
 ARG UID=3009
-
 RUN apt-get update \
     && apt-get upgrade -y \
     && apt-get install -y calibre ffmpeg git unzip \
     && rm -rf /var/cache/apt/*
 
-RUN pip install --no-cache-dir piper-tts pydub nltk beautifulsoup4 ebooklib tqdm spacy gradio \
+RUN pip install --no-cache-dir --upgrade pip \
+	&& pip install --no-cache-dir piper-tts pydub nltk beautifulsoup4 ebooklib tqdm spacy gradio blis=1.1.0 \
     && python -m spacy download en_core_web_sm
 
 COPY nltk.zip /tmp
