--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -3,11 +3,11 @@ ARG UID=3009
 
 RUN apt-get update \
 	&& apt-get upgrade -y \
-	&& apt-get install -y calibre ffmpeg git unzip \
+	&& apt-get install -y calibre ffmpeg git unzip curl \
 	&& rm -rf /var/cache/apt/*
 
 RUN pip install --no-cache-dir --upgrade pip \
-	&& curl -sSL https://github.com/DrewThomasson/ebook2audiobookpiper-tts/raw/8284918b7ae5d563f0c4d5b42abd0f6402190156/requirements.txt | pip install - \
+	&& curl -sSL https://github.com/DrewThomasson/ebook2audiobookpiper-tts/raw/8284918b7ae5d563f0c4d5b42abd0f6402190156/requirements.txt | grep -Ev 'nvidia|triton' | pip install -r /dev/stdin \
 	&& python -m spacy download en_core_web_sm
 
 COPY nltk.zip /tmp
