--- a/.github/workflows/build-attestation.yml
+++ b/.github/workflows/build-attestation.yml
@@ -57,7 +57,8 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v6
         with:
-          context: ./Attestation/attestation.dockerfile
+          context: ./Attestation
+          file: ./Attestation/attestation.dockerfile
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
