--- a/.github/workflows/build-attestation-backend.yml
+++ b/.github/workflows/build-attestation-backend.yml
@@ -23,7 +23,7 @@ jobs:
     permissions:
       contents: read
       packages: write
-    timeout: 18
+    timeout-minutes: 18
     runs-on: ubuntu-24.04
 
     steps:
