--- a/.github/workflows/build-attestation.yml
+++ b/.github/workflows/build-attestation.yml
@@ -23,7 +23,7 @@ jobs:
     permissions:
       contents: read
       packages: write
-    timeout: 30
+    timeout-minutes: 30
     runs-on: ubuntu-24.04
 
     steps:
