--- a/Attestation/compose.yml
+++ b/Attestation/compose.yml
@@ -20,7 +20,7 @@ services:
 
   attestation:
     image: ghcr.io/pinoykrissmith/containers:attestation
-    container_name: attestation-proxy
+    container_name: attestation
     env_file:
       - .env
     networks:
