Updated auditor workflow

--- a/.github/workflows/build-auditor.yml
+++ b/.github/workflows/build-auditor.yml
@@ -1,7 +1,4 @@
-  workflow_dispatch:
-    inputs:
-      name:
-        default: "Build custom Auditor"
+name: Build Custom Auditor
 
 jobs:
   build:
