--- a/.github/workflows/build-auditor.yml
+++ b/.github/workflows/build-auditor.yml
@@ -1,13 +1,18 @@
 name: Build Custom Auditor
 
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checking out branch
-      uses: actions/checkout@v3
-      with:
+        uses: actions/checkout@v3
+        with:
           repository: GrapheneOS/Auditor
           ref: refs/tags/$(git ls-remote --tags https://github.com/GrapheneOS/Auditor.git | awk '{print $2}' | grep -v '\^{}' | sort -V | tail -n 1 | sed 's|refs/tags/||')
 
