--- a/.github/workflows/build-auditor.yml
+++ b/.github/workflows/build-auditor.yml
@@ -1,4 +1,4 @@
-name: Build Custom Auditor
+name: Build Auditor
 
 on:
   workflow_dispatch:
@@ -37,7 +37,7 @@ jobs:
         run: ./gradlew assembleRelease --stacktrace
 
       - name: Upload Release Build to Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
            name: release-artifacts
            path: app/build/outputs/apk/release/*.apk
