--- a/Attestation/nginx.conf
+++ b/Attestation/nginx.conf
@@ -1,3 +1,6 @@
+load_module modules/ngx_http_brotli_filter_module.so;
+load_module modules/ngx_http_brotli_static_module.so;
+
 worker_processes  auto;
 pid        /tmp/nginx.pid;
 events {
@@ -108,6 +111,7 @@ http {
         include snippets/security-headers.conf;
         add_header Cross-Origin-Resource-Policy "same-origin" always;
         gzip_static on;
+        brotli_static on;
 
         if ($request_uri ~ ^[^?]+//) {
             rewrite ^(.*)$ $1 permanent;
@@ -171,6 +175,7 @@ http {
             add_header Cross-Origin-Resource-Policy "same-origin" always;
             add_header Cache-Control "public, max-age=31536000, immutable";
             gzip_static off;
+            brotli_static off;
         }
 
         location = /submit {
@@ -231,6 +236,9 @@ http {
             }
             gzip on;
             gzip_types application/json;
+            brotli on;
+            brotli_comp_level 1;
+            brotli_types application/json;
             proxy_pass http://backend;
             limit_req zone=backend-limit burst=32 nodelay;
             max_ranges 0;
@@ -241,6 +249,7 @@ http {
             add_header Cross-Origin-Resource-Policy "same-origin" always;
             add_header Cache-Control "public, max-age=31536000, immutable";
             gzip_static off;
+            brotli_static off;
         }
 
         location ~ "/$" {
@@ -285,6 +294,7 @@ http {
             add_header Cross-Origin-Resource-Policy "cross-origin" always;
             add_header Cache-Control "public, max-age=31536000";
             gzip_static off;
+            brotli_static off;
         }
 
         location ~ "\.(?:json|txt|xml)$" {
