--- a/Attestation/nginx.conf
+++ b/Attestation/nginx.conf
@@ -2,9 +2,10 @@ load_module modules/ngx_http_brotli_filter_module.so;
 load_module modules/ngx_http_brotli_static_module.so;
 
 worker_processes  auto;
+worker_rlimit_nofile 16384;
 pid        /tmp/nginx.pid;
 events {
-    worker_connections  1024;
+    worker_connections  4096;
 }
 
 http {
@@ -30,7 +31,7 @@ http {
     server_tokens off;
     msie_padding off;
 
-    client_max_body_size 1k;
+    client_max_body_size 10M;
     client_body_buffer_size 1k;
     client_header_buffer_size 1k;
     large_client_header_buffers 2 1k;
