--- a/Attestation/nginx.conf
+++ b/Attestation/nginx.conf
@@ -31,7 +31,7 @@ http {
     server_tokens off;
     msie_padding off;
 
-    client_max_body_size 10M;
+    client_max_body_size 1k;
     client_body_buffer_size 1k;
     client_header_buffer_size 1k;
     large_client_header_buffers 2 1k;
@@ -177,6 +177,38 @@ http {
             add_header Cache-Control "public, max-age=31536000, immutable";
             gzip_static off;
             brotli_static off;
+        }
+
+        location = /auditor/submit {
+            if ($request_method != POST) {
+                return 405;
+            }
+            client_max_body_size 64k;
+            client_body_buffer_size 16k;
+            proxy_pass http://backend;
+            limit_req zone=backend-limit burst=32 nodelay;
+            limit_req zone=sample-limit burst=10 nodelay;
+            max_ranges 0;
+        }
+
+        location = /auditor/challenge {
+            if ($request_method != POST) {
+                return 405;
+            }
+            proxy_pass http://backend;
+            limit_req zone=backend-limit burst=32 nodelay;
+            max_ranges 0;
+        }
+
+        location = /auditor/verify {
+            if ($request_method != POST) {
+                return 405;
+            }
+            client_max_body_size 4k;
+            client_body_buffer_size 4k;
+            proxy_pass http://backend;
+            limit_req zone=backend-limit burst=32 nodelay;
+            max_ranges 0;
         }
 
         location = /submit {
