--- a/Attestation/nginx.conf
+++ b/Attestation/nginx.conf
@@ -3,6 +3,7 @@ load_module modules/ngx_http_brotli_static_module.so;
 
 worker_processes  auto;
 worker_rlimit_nofile 16384;
+worker_shutdown_timeout 1h;
 pid        /tmp/nginx.pid;
 events {
     worker_connections  4096;
@@ -268,9 +269,11 @@ http {
                 return 405;
             }
             gzip on;
+            gzip_min_length 256;
             gzip_types application/json;
             brotli on;
             brotli_comp_level 1;
+            brotli_min_length 256;
             brotli_types application/json;
             proxy_pass http://backend;
             limit_req zone=backend-limit burst=32 nodelay;
@@ -286,6 +289,9 @@ http {
         }
 
         location ~ "/$" {
+            if ($request_uri ~ \?) {
+                rewrite ^(.*)$ $1? permanent;
+            }
             include snippets/security-headers.conf;
             add_header Cross-Origin-Resource-Policy "same-origin" always;
             add_header Cache-Control "public, no-cache";
@@ -346,6 +352,9 @@ http {
         }
 
         location / {
+            if ($request_uri ~ \?) {
+                rewrite ^(.*)$ $1? permanent;
+            }
             include snippets/security-headers.conf;
             add_header Cross-Origin-Resource-Policy "same-origin" always;
             add_header Cache-Control "public, no-cache";
