--- a/Caddy/Caddyfile
+++ b/Caddy/Caddyfile
@@ -56,16 +56,13 @@
 }
 
 (lan) {
-	@allowed {
+	@lan {
 		remote_ip 192.168.0.0/24
 		remote_ip 192.168.1.0/24
 		remote_ip 100.64.0.0/10
 		remote_ip 127.0.0.0/8
 		remote_ip 10.0.0.0/8
 		remote_ip 172.16.0.0/12
-	}
-	handle {
-		abort
 	}
 }
 
@@ -75,7 +72,7 @@ vw.{$MY_DOMAIN} {
 	import cloudflare
 	import lan
 	encode zstd gzip
-	handle @allowed {
+	route @lan {
 		reverse_proxy vaultwarden:80
 	}
 }
@@ -93,7 +90,7 @@ hmdm.{$MY_DOMAIN} {
 	import cloudflare
 	import lan
 	encode zstd gzip
-	handle @allowed {
+	route @lan {
 		reverse_proxy headwind:8080
 	}
 }
@@ -111,7 +108,7 @@ eb2ab.{$MY_DOMAIN} {
 	import cloudflare
 	import lan
 	encode zstd gzip
-	handle @allowed {
+	route @lan {
 		reverse_proxy ebook2audiobookpiper:7860
 	}
 }
@@ -129,7 +126,7 @@ fdroid.{$MY_DOMAIN} {
 	import cloudflare
 	import lan
 	encode zstd gzip
-	handle @allowed {
+	route @lan {
 		reverse_proxy /repo/* fdroid:8080 {
 			header_up Location {http.request.scheme}://{http.request.host}/repo{http.request.uri}
 		}
@@ -161,11 +158,8 @@ nitter.{$MY_DOMAIN} {
 		Permissions-Policy "Permissions-Policy: accelerometer=(), ambient-light-sensor=(), autoplay=(self), battery=(), camera=(), cross-origin-isolated=(), display-capture=(), document-domain=(), encrypted-media=(), execution-while-not-rendered=(), execution-while-out-of-viewport=(), fullscreen=(self), geolocation=(), gyroscope=(), keyboard-map=(), magnetometer=(), microphone=(), midi=(), navigation-override=(), payment=(), picture-in-picture=(self), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(), usb=(), web-share=(), xr-spatial-tracking=()"
 		header Content-Security-Policy "default-src 'none'; script-src 'self' 'unsafe-inline'; img-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self'; object-src 'none'; media-src 'self' blob:; worker-src 'self' blob:; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; connect-src 'self' https://*.twimg.com; manifest-src 'self'"
 	}
-	handle @allowed {
+	route @lan {
 		reverse_proxy nitter-gluetun:8090 {
-			transport http {
-				compression off
-			}
 		}
 	}
 }
@@ -183,7 +177,7 @@ sync.{$MY_DOMAIN} {
 	import cloudflare
 	import lan
 	encode zstd gzip
-	handle @allowed {
+	route @lan {
 		reverse_proxy resilio-sync:8888
 	}
 }
@@ -199,18 +193,8 @@ uptime.{$MY_DOMAIN} {
 	import nolog
 	import cloudflare
 	import lan
-	handle @allowed {
+	route @lan {
 		reverse_proxy http://uptime-kuma.{$TAILNET}:3001
-	}
-}
-
-auditor.{$MY_DOMAIN} {
-	import safe
-	import nolog
-	import cloudflare
-	import lan
-	handle @allowed {
-		reverse_proxy attestation:8080
 	}
 }
 
@@ -264,5 +248,22 @@ traccar.{$MY_DOMAIN} {
 	route {
 		crowdsec
 		reverse_proxy traccar:8082
+	}
+}
+
+auditor.{$MY_DOMAIN} {
+	import safe
+	import log
+	import cloudflare
+	route {
+		@Auditor {
+			not path /auditor/*
+			not path /api/*
+		}
+		route {
+			crowdsec
+			respond @Auditor "Access Denied" 403
+			reverse_proxy attestation:8080
+		}
 	}
 }
