--- a/.github/workflows/build-auditor.yml
+++ b/.github/workflows/build-auditor.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: GrapheneOS/Auditor
-          ref: ${{ steps.auditor.outputs.tag }}
+          ref: 68
 
       - name: Replace attestation.app with own server
         env:
