--- a/Attestation/nginx.conf
+++ b/Attestation/nginx.conf
@@ -86,7 +86,7 @@ http {
 
     upstream backend {
         zone backend 128k;
-        server attestation-backend:8080 max_conns=1024 max_fails=0;
+        server localhost:8000 max_conns=1024 max_fails=0;
     }
 
     map $uri $preload_resources_uri {
