--- a/Attestation/Dockerfile
+++ b/Attestation/Dockerfile
@@ -34,14 +34,6 @@ RUN git clone --depth=1 https://github.com/GrapheneOS/AttestationServer.git . \
 	&& sed -i 's/"990E04F0864B19F14F84E0E432F7A393F297AB105A22C1E1B10B442A4A62C42C"/System.getenv("CERTIFICATE") != null ? System.getenv("CERTIFICATE") : "990E04F0864B19F14F84E0E432F7A393F297AB105A22C1E1B10B442A4A62C42C"/g' src/main/java/app/attestation/server/AttestationProtocol.java \
 	&& ./gradlew build && cp /tmp/sqlite4java/out/linux-$(uname -m)/*.so libs/sqlite4java-prebuilt
 
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules java.logging,jdk.httpserver,java.sql,java.desktop,java.net.http \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /javaruntime
-
 FROM docker.io/library/alpine:latest
 ARG UID=200003
 ARG GID=200003
@@ -80,7 +72,7 @@ COPY --from=ghcr.io/nginxinc/nginx-unprivileged:stable-alpine-slim /docker-entry
 WORKDIR /data
 COPY --chown=nginx:nginx --from=backend /app/build/libs/ /app
 COPY --chown=nginx:nginx --from=backend /app/libs/sqlite4java-prebuilt/ /usr/lib
-COPY --from=backend /javaruntime $JAVA_HOME
+COPY --from=docker.io/library/eclipse-temurin:21-alpine $JAVA_HOME $JAVA_HOME
 RUN printf '#!/bin/sh\n/opt/java/openjdk/bin/java -jar /app/attestation-server.jar &' > /docker-entrypoint.d/99-attestation.sh \
 	&& chmod +x /docker-entrypoint.d/99-attestation.sh
 
