--- a/Traccar/Dockerfile
+++ b/Traccar/Dockerfile
@@ -1,11 +1,7 @@
 FROM docker.io/library/eclipse-temurin:17-noble
 RUN $JAVA_HOME/bin/jlink \
-		--add-modules java.base,java.compiler,java.datatransfer,java.desktop,java.instrument,java.logging,java.management,java.naming,java.net.http,java.scripting,java.security.jgss,java.security.sasl,java.sql,java.transaction.xa,java.xml,jdk.attach,jdk.jdi,jdk.net,jdk.sctp,jdk.unsupported \
-		--strip-debug \
-		--no-man-pages \
-		--no-header-files \
-		--compress=2 \
-		--output /javaruntime
+	--add-modules java.base,java.compiler,java.datatransfer,java.desktop,java.instrument,java.logging,java.management,java.naming,java.net.http,java.scripting,java.security.jgss,java.security.sasl,java.sql,java.transaction.xa,java.xml,jdk.attach,jdk.jdi,jdk.net,jdk.sctp,jdk.unsupported \
+	--strip-debug --no-man-pages --no-header-files --compress=2 --output /javaruntime
 FROM gcr.io/distroless/java-base-debian12:nonroot
 WORKDIR /home/nonroot/traccar
 ENV JAVA_HOME=/opt/java/openjdk
