--- a/Archiveteam/auto/compose.yml
+++ b/Archiveteam/auto/compose.yml
@@ -19,5 +19,6 @@ services:
       - "no-new-privileges=true"
     volumes:
       - /elysium/archiveteam-warrior-data:/home/warrior/projects:Z
+      - /elysium/archiveteam-warrior-data:/home/warrior/data/projects:Z
     tmpfs:
       - /home/warrior/data:mode=777,noexec,nosuid,nodev
