Fixed Dockerfile for Nitter

--- a/Nitter/Dockerfile
+++ b/Nitter/Dockerfile
@@ -11,17 +11,18 @@ RUN git clone --depth 1 https://github.com/sekai-soft/nitter.git . \
 
 FROM docker.io/library/alpine:latest
 ARG UID
-ENV NITTER_ACCOUNTS_FILE=/nitter-data/guest_accounts.json
-WORKDIR /app
+ENV NITTER_ACCOUNTS_FILE=/data/guest_accounts.json
+ENV TWITTER_CREDENTIALS_FILE=/data/twitter-credentials.json
+WORKDIR /data
 RUN apk --no-cache add pcre ca-certificates bash python3 py3-pip
 RUN addgroup -g ${UID} nitter \
 	&& adduser -g ${UID} --ingroup nitter --disabled-password --system nitter
 COPY --from=nim /src/nitter/scripts/requirements.txt ./
 RUN pip install --no-cache-dir -r ./requirements.txt --break-system-packages
 USER nitter
-COPY --chown=${UID}:${UID} --from=nim /src/nitter/nitter ./
-COPY --chown=${UID}:${UID} --from=nim /src/nitter/public ./public
-COPY --chown=${UID}:${UID} --from=nim /src/nitter/scripts/auth.py ./
-COPY --chown=${UID}:${UID} ./nitter.conf.example ./nitter.conf
+COPY --chown=${UID}:${UID} --from=nim /src/nitter/nitter /app/nitter
+COPY --chown=${UID}:${UID} --from=nim /src/nitter/public /app/public
+COPY --chown=${UID}:${UID} --from=nim /src/nitter/scripts/auth.py /app/auth.py
+COPY --chown=${UID}:${UID} ./nitter.conf.example /app/nitter.conf
 EXPOSE 8080
 CMD ["/bin/bash", "-c", "python /app/auth.py /nitter-data/guest_accounts.json && /app/nitter"]
