--- a/Nitter/compose.yml
+++ b/Nitter/compose.yml
@@ -1,11 +1,9 @@
 services:
     nitter:
-      image: ghcr.io/pinoykrissmith/containers:nitter
+      build:
+        context: .
       container_name: nitter
       user: "200013:200013"
-      labels:
-        com.centurylinklabs.watchtower.enable: "true"
-        io.containers.autoupdate: "registry"
       volumes:
         - ./twitter-credentials.json:/data/twitter-credentials.json:Z,ro
         - ./nitter.conf:/app/nitter.conf:Z,ro
