--- a/Nitter/compose.yml
+++ b/Nitter/compose.yml
@@ -77,10 +77,11 @@ services:
         - .env  
       environment:
         - TZ=Europe/Paris
-        - FREE_ONLY=true
+        #- FREE_ONLY=true
         - DNS_KEEP_NAMESERVER=true
       volumes:
         - ./passwd:/etc/passwd:Z
+        - ./custom.conf:/gluetun/custom.conf:Z
       tmpfs:
         - /gluetun:noexec,nosuid,nodev
         - /tmp:noexec,nosuid,nodev
