--- a/Nitter/Dockerfile
+++ b/Nitter/Dockerfile
@@ -17,7 +17,7 @@ WORKDIR /app
 RUN apk --no-cache add pcre ca-certificates python3 py3-pip
 RUN addgroup -g ${UID} nitter \
 	&& adduser -g ${UID} --ingroup nitter --disabled-password --system nitter
-COPY --from=nim /src/nitter/scripts/requirements.txt ./
+COPY --from=0 /src/nitter/scripts/requirements.txt ./
 RUN pip install --no-cache-dir -r ./requirements.txt --break-system-packages
 USER nitter
 COPY --chown=${UID}:${UID} --from=0 /src/nitter/nitter /app/nitter
