--- a/Nitter/Dockerfile
+++ b/Nitter/Dockerfile
@@ -14,7 +14,7 @@ ARG UID
 ENV NITTER_ACCOUNTS_FILE=/data/guest_accounts.json
 ENV TWITTER_CREDENTIALS_FILE=/data/twitter-credentials.json
 WORKDIR /app
-RUN apk --no-cache add pcre ca-certificates python3 py3-pip
+RUN apk --no-cache add pcre ca-certificates python3 py3-pip tini
 RUN addgroup -g ${UID} nitter \
 	&& adduser -g ${UID} --ingroup nitter --disabled-password --system nitter
 COPY --from=0 /src/nitter/scripts/requirements.txt ./
@@ -25,4 +25,5 @@ COPY --chown=${UID}:${UID} --from=0 /src/nitter/public /app/public
 COPY --chown=${UID}:${UID} --from=0 /src/nitter/scripts/auth.py /app/auth.py
 COPY --chown=${UID}:${UID} ./nitter.conf.example /app/nitter.conf
 EXPOSE 8080
+ENTRYPOINT ["/sbin/tini", "--"]
 CMD ["/app/nitter"]
