--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -23,7 +23,7 @@ RUN mkdir /app \
 USER piper
 WORKDIR /app
 RUN git clone --depth 1 https://github.com/DrewThomasson/ebook2audiobookpiper-tts.git . \
-	&& sed -i 's/demo\.launch(share=True)/demo.launch(server_name="0.0.0.0")/' gradio_gui.py
+	&& sed -i 's/demo\.launch(share=True)/demo.launch(server_name="0.0.0.0", server_port=8080)/' gradio_gui.py
 
-EXPOSE 7861
-CMD ["/usr/local/bin/python /app/gradio_gui.py"]
+EXPOSE 8080
+CMD ["/app/gradio_gui.py"]
