--- a/Nitter/compose.yml
+++ b/Nitter/compose.yml
@@ -77,7 +77,7 @@ services:
         - .env  
       environment:
         - TZ=Europe/Paris
-        #- FREE_ONLY=true
+        - FREE_ONLY=true
         - DNS_KEEP_NAMESERVER=true
       volumes:
         - ./passwd:/etc/passwd:Z
