--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update \
 	&& apt-get install -y calibre ffmpeg git unzip curl python3-pip \
 	&& rm -rf /var/cache/apt/*
 
-RUN curl -sSL https://github.com/DrewThomasson/ebook2audiobookpiper-tts/raw/8284918b7ae5d563f0c4d5b42abd0f6402190156/requirements.txt | grep -Ev 'nvidia|triton' | pip3 install --no-cache-dir -r /dev/stdin \
+RUN curl -sSL https://github.com/DrewThomasson/ebook2audiobookpiper-tts/raw/8284918b7ae5d563f0c4d5b42abd0f6402190156/requirements.txt | grep -Ev 'nvidia|triton' | pip3 install --break-system-packages --no-cache-dir -r /dev/stdin \
 	&& python3 -m spacy download en_core_web_sm
 
 RUN mkdir /app \
