--- a/F-Droid/Dockerfile
+++ b/F-Droid/Dockerfile
@@ -3,18 +3,8 @@ USER root
 ARG VERSION=2.3.5
 ENV LANG=C.UTF-8 \
     DEBIAN_FRONTEND=noninteractive
-RUN echo Etc/UTC > /etc/timezone \
-	&& echo 'APT::Install-Recommends "0";' \
-		'APT::Install-Suggests "0";' \
-		'APT::Acquire::Retries "20";' \
-		'APT::Get::Assume-Yes "true";' \
-		'Dpkg::Use-Pty "0";' \
-		'quiet "1";' \
-        >> /etc/apt/apt.conf.d/99fdroid
-
-RUN apt-get update \
-	&& apt-get upgrade \
-	&& apt-get dist-upgrade \
+RUN printf 'APT::Install-Recommends "0";\nAPT::Install-Suggests "0";\nAPT::Acquire::Retries "20";\nAPT::Get::Assume-Yes "true";\nDpkg::Use-Pty "0";\nquiet "1";' > /etc/apt/apt.conf.d/99github \
+	&& apt-get update && apt-get upgrade && apt-get dist-upgrade \
 	&& apt-get install apksigner git lzip openjdk-17-jdk-headless python3 python3-pip wget \
 	&& pip install --no-cache-dir --break-system-packages \
 		git+https://github.com/androguard/androguard@16a6bd21946bfe3d75639ffd3d96957971b6553f \
