--- a/ebook2audiobookpiper/Dockerfile
+++ b/ebook2audiobookpiper/Dockerfile
@@ -6,11 +6,12 @@ ENV PIP_BREAK_SYSTEM_PACKAGES=1 \
 
 RUN printf 'APT::Install-Recommends "0";\nAPT::Install-Suggests "0";\nAPT::Acquire::Retries "20";\nAPT::Get::Assume-Yes "true";\nDpkg::Use-Pty "0";\nquiet "1";' > /etc/apt/apt.conf.d/99github \
 	&& apt-get update && apt-get upgrade && apt-get dist-upgrade \
-	&& apt-get install calibre ffmpeg git unzip curl python3-pip \
+	&& apt-get install calibre ffmpeg git curl python3-pip build-essential python3-dev \
 	&& rm -rf /var/cache/apt/*
 
 RUN curl -sSL https://github.com/DrewThomasson/ebook2audiobookpiper-tts/raw/8284918b7ae5d563f0c4d5b42abd0f6402190156/requirements.txt | grep -Ev 'nvidia|triton' | pip3 install --no-cache-dir -r /dev/stdin \
-	&& python3 -m spacy download en_core_web_sm
+	&& python3 -m spacy download en_core_web_sm \
+	&& apt-get purge build-essential python3-dev curl
 
 RUN mkdir /app \
 	&& chown --recursive ${UID}:${UID} /app \
@@ -23,4 +24,5 @@ RUN git clone --depth 1 https://github.com/DrewThomasson/ebook2audiobookpiper-tt
 	&& sed -i 's/demo\.launch(share=True)/demo.launch(server_name="0.0.0.0", server_port=8080)/' gradio_gui.py
 
 EXPOSE 8080
-CMD ["/usr/bin/python3", "/app/gradio_gui.py"]
+ENTRYPOINT ["/usr/bin/python3"]
+CMD ["/app/gradio_gui.py"]
